[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "twitterstreams"
version = "0.0.1"
authors = [
  { name="Marwa Ahmed", email="marwa.hegy@gmail.com" },
]
description = "This is a wrapper around the twitter API for streaming data and/or searching latest trends or influencers of a certain topic"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"